tongue ui gap fix

--- a/classy/src/app/components/tongue/tongue.component.scss
+++ b/classy/src/app/components/tongue/tongue.component.scss
@@ -1,4 +1,5 @@
 .search {
+  height: 61px;
   position: absolute;
   top: 0;
 }
